--- a/style.css
+++ b/style.css
@@ -45,3 +45,60 @@
     margin: 0;
     padding: 0;
   }
+
+/* Hover text */
+/*Hover text*/
+.galleryimage {
+	position: relative;
+	width: 100%;
+}
+.textover {
+	position: absolute;
+	left: 0;
+	top: 20%;
+	width: 100%;
+}
+.textover span { 
+   color: rgb(2, 2, 2) 19); 
+   font: bold 18px/30px 'Open Sans', Sans-Serif; 
+   letter-spacing: -1px;  
+   background: rgb(252, 252, 252); /* fallback color */
+   /* background: rgba(0, 0, 0, 0.7); */
+   background: rgb(255, 255, 255);
+   padding: 10px; 
+   opacity: 0;
+   -webkit-transition: opacity 0.4s;
+}
+.galleryimage:hover .textover span {
+	opacity: 0.7;
+}
+
+
+
+.projectimage {
+	position: relative;
+	width: 100%;
+	text-align: center;
+}
+h5 {
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	text-align: center;
+}
+h5 span { 
+   text-align: center;
+   color: grey; 
+   font: 12px/45px 'Open Sans', Sans-Serif; 
+   letter-spacing: -1px;  
+   background: rgb(0, 0, 0); /* fallback color */
+   background: rgba(0, 0, 0, 0.7);
+   padding: 10px; 
+   opacity: 1;
+   -webkit-transition: opacity 0.4s;
+}
+.projectimage:hover h5 span {
+	opacity: .3;
+}
